k8s/apps/prod/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
    - port: 80
      targetPort: 9000
