k8s/apps/prod/mealie/local-only-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mealie
  namespace: mealie
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mealie.oplabs.us`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: local-ip-list
          namespace: traefik
      services:
        - name: mealie
          port: 9000
  tls:
    secretName: oplabs-us-tls
